--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,7 +27,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: Peter-JXL
+          user: TravelTibet
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
