--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -1,17 +1,17 @@
-name: generate animation
+name: generate snake
 
 on:
-  # run automatically every 26 hours
+  # run automatically every 12 hours
   schedule:
-    - cron: "0 */6 * * *" 
+    - cron: "0 */12 * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
   
   # run on every push on the master branch
-  push:
-    branches:
-    - master
+  #push:
+   # branches:
+    #- main
   
   
 
